--- a/views/login.html
+++ b/views/login.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
-  <link rel="stylesheet" href="public/bootstrap/dist/css/bootstrap.min.css">
-  <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="public/css/style.css">
-
 </head>
 <body>
+<div></div>
 <div class="container">
   <div class="omb_login">
     <h3 class="omb_authTitle">Login or <a href="#">Sign up</a></h3>
@@ -59,7 +59,7 @@
             <input type="password" class="form-control"
                    name="password" placeholder="Password">
           </div>
-          <span class="help-block">Password error</span>
+          <span class="help-block" style="color: red">Password error</span>
 
           <button class="btn btn-lg btn-primary btn-block"
                   type="submit">Login
@@ -76,8 +76,6 @@
     </div>
   </div>
 </div>
-<script type="text/javascript" src="public/bootstrap/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="public/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
