--- a/views/register.html
+++ b/views/register.html
@@ -13,6 +13,9 @@
 <body>
 <div class="container">
     <div class="row centered-form">
+        <div class="col-sm-6 col-md-4">
+            <img src="" alt="" class="img-rounded img-responsive" />
+        </div>
         <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
