add btn changeProfile

--- a/views/profile.html
+++ b/views/profile.html
@@ -28,6 +28,8 @@
                             <br />
                             <i class="username">maile</i>
                             <br />
+                        </p>
+                        <button class="btn-change">Change Profile</button>
                     </div>
                 </div>
             </div>
