--- a/views/login.html
+++ b/views/login.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="public/css/style.css">
-</head>
-<body>
-<div></div>
+{% set title='Login' %}
+{% extends '_layout.html' %}
+
+{% block content %}
 <div class="container">
   <div class="omb_login">
     <h3 class="omb_authTitle">Login or <a href="#">Sign up</a></h3>
@@ -59,11 +51,9 @@
             <input type="password" class="form-control"
                    name="password" placeholder="Password">
           </div>
-          <span class="help-block" style="color: red">Password error</span>
 
           <button class="btn btn-lg btn-primary btn-block"
-                  type="submit">Login
-          </button>
+                  type="submit">Login</button>
         </form>
       </div>
     </div>
@@ -76,6 +66,4 @@
     </div>
   </div>
 </div>
-
-</body>
-</html>
+{% endblock %}
