--- a/views/changeProfile.html
+++ b/views/changeProfile.html
@@ -24,7 +24,7 @@
                     <label class="col-lg-3 control-label">Full name:</label>
                     <div class="col-lg-8">
                         <label>
-                            <input class="form-control" value="Bishop"
+                            <input class="form-control" value=""
                                    type="text">
                         </label>
                     </div>
@@ -34,7 +34,7 @@
                     <div class="col-lg-8">
                         <label>
                             <input class="form-control"
-                                   value="janesemail@gmail.com" type="text">
+                                   value="" type="text">
                         </label>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <label class="col-md-3 control-label">Username:</label>
                     <div class="col-md-8">
                         <label>
-                            <input class="form-control" value="janeuser"
+                            <input class="form-control" value=""
                                    type="text">
                         </label>
                     </div>
