--- a/views/register.html
+++ b/views/register.html
@@ -2,7 +2,7 @@
 {% extends '_layout.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="padding-top: 50px">
     <div class="row centered-form">
         <div class="col-sm-6 col-md-4 col-md-push-4">
             <div class="panel panel-default">
