--- a/views/login.html
+++ b/views/login.html
@@ -2,14 +2,14 @@
 {% extends '_layout.html' %}
 
 {% block content %}
-<div class="container" style="padding-top: 50px">
+<div class="container">
   <div class="row centered-form">
-   <div class="col-sm-6 col-md-8 col-md-push-4">
+   <div class="col-sm-6 col-md-8 col-md-push-5">
     <div>
       <h3 class="omb_authTitle">Login or <a href="/register">Sign up</a></h3>
       <div class="row omb_row-sm-offset-3 omb_socialButtons">
         <div class="col-xs-4 col-sm-2">
-          <a href="/auth/facebook" class="btn btn-lg btn-facebook">
+          <a href="/auth/facebook" class="btn btn-lg btn-block btn-facebook">
             <i class="fa fa-facebook visible-xs"></i>
             <span class="hidden-xs">Facebook</span>
           </a>
@@ -39,7 +39,7 @@
           <form class="omb_loginForm" action="" autocomplete="off" method="POST">
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-user"></i></span>
-              <input type="text" class="form-control" name="username" placeholder="email address">
+              <input type="text" class="form-control" name="username" placeholder=Email address">
             </div>
             <span class="help-block"></span>
 
