--- a/views/register.html
+++ b/views/register.html
@@ -2,9 +2,9 @@
 {% extends '_layout.html' %}
 
 {% block content %}
-<div class="container" style="padding-top: 50px">
+<div class="container">
     <div class="row centered-form">
-        <div class="col-sm-6 col-md-4 col-md-push-4">
+        <div class="col-sm-6 col-md-4 col-md-push-5">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Please sign up</h3>
