--- a/views/changeProfile.html
+++ b/views/changeProfile.html
@@ -2,7 +2,7 @@
 {% extends '_layout.html' %}
 
 {% block content %}
-<div class="container" style="padding-top: 60px;">
+<div class="container">
     <h1 class="page-header">Edit Profile</h1>
     <div class="row">
         <!-- left column -->
