--- a/views/_layout.html
+++ b/views/_layout.html
@@ -8,7 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body style="background: ">
+<body>
 <div class="container container-fluid">
     {% for err in errors %}
     <div class='alert alert-danger'>{{ err.msg }}</div>
