--- a/views/profile.html
+++ b/views/profile.html
@@ -3,13 +3,13 @@
 
 {% block content %}
 <div class="container">
-    <nav class="navbar navbar-inverse">
-        <ul class="nav navbar-nav navbar-right">
+    <nav class="navbar transparent navbar-fixed-top">
+        <ul class="nav navbar-nav navbar-right logout">
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
     </nav>
     <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="col-xs-12 col-sm-6 col-md-8 col-md-push-3">
             <div class="well well-sm">
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
