--- a/views/login.html
+++ b/views/login.html
@@ -48,7 +48,7 @@
               <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin-top: 10px">Login</button>
+            <button class="btn btn-lg btn-primary btn-block login" type="submit">Login</button>
           </form>
         </div>
       </div>
