--- a/views/profile.html
+++ b/views/profile.html
@@ -5,7 +5,7 @@
 <div class="container">
     <nav class="navbar transparent navbar-fixed-top">
         <ul class="nav navbar-nav navbar-right logout">
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            <li><a href="#" class="logout-text"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
     </nav>
     <div class="row">
