--- a/views/profile.html
+++ b/views/profile.html
@@ -25,7 +25,8 @@
                             <i class="username">{{ profile.username }}</i>
                             <br />
                         </p>
-                        <button class="btn-change">Change Profile</button>
+                        <a href="/profile/edit"><button class="btn btn-warning">Change Profile</button></a>
+                        <!-- <a href="/profile/editPw"><button class="btn-default">Change Password</button></a> -->
                     </div>
                 </div>
             </div>
