--- a/views/changeProfile.html
+++ b/views/changeProfile.html
@@ -19,41 +19,42 @@
                 <i class="fa fa-coffee"></i>
             </div>
             <h3>Personal info</h3>
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form" action="/profile" method="post">
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Full name:</label>
                     <div class="col-lg-8">
                         <label>
-                            <input class="form-control" value=""
-                                   type="text">
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Email:</label>
-                    <div class="col-lg-8">
-                        <label>
-                            <input class="form-control"
-                                   value="" type="text">
+                            <input class="form-control" value="{{ profile.fullname }}"
+                                   type="text" name="fullname">
                         </label>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-3 control-label">Username:</label>
+                    <label class="col-lg-3 control-label">Email:</label>
+                    <div class="col-lg-8">
+                        <label>
+                            <input class="form-control"
+                                   value="{{ profile.email }}" type="text" name="email">
+                        </label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label">Address:</label>
                     <div class="col-md-8">
                         <label>
-                            <input class="form-control" value=""
-                                   type="text">
+                            <input class="form-control" value="{{ profile.address }}"
+                                   type="text" name="address">
                         </label>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-3 control-label"></label>
                     <div class="col-md-8">
-                        <input class="btn btn-primary" value="Save Changes" type="button">
+                        <button type="submit" class="btn btn-primary">Save Change</button>
                         <span></span>
-                        <input class="btn btn-default" value="Cancel" type="reset">
+                        <a href="/profile" class="btn btn-default">Cancel</a>
                     </div>
                 </div>
             </form>
