--- a/views/list-profile.html
+++ b/views/list-profile.html
@@ -2,6 +2,8 @@
 {% extends '_layout.html' %}
 
 {% block content %}
+<h1>{{title}}</h1>
+<hr>
 <div class="row">
 	<div class="col-md-8"></div>
 	<div class="col-md-4">
