--- a/views/changeProfile.html
+++ b/views/changeProfile.html
@@ -8,9 +8,11 @@
         <!-- left column -->
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="text-center">
-                <img src="" class="avatar img-circle img-thumbnail" alt="avatar">
-                <h6>Upload a different photo...</h6>
-                <input type="file" class="text-center center-block well well-sm">
+                <img src="{{ profile.avatar }}" class="avatar img-circle img-thumbnail" alt="avatar">
+                <label class='btn btn-default' id='uploadImage' for='inputImage'>
+                    Upload new picture
+                    <input type="file" id='inputImage'>
+                </label>
             </div>
         </div>
         <!-- edit form column -->
@@ -49,6 +51,9 @@
                         </label>
                     </div>
                 </div>
+
+                <input type="hidden" class="form-control" name='avatar' value="{{ profile.avatar }}">
+                
                 <div class="form-group">
                     <label class="col-md-3 control-label"></label>
                     <div class="col-md-8">
