--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
           </a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="btn btn-lg btn-block btn-google">
+          <a href="/auth/google" class="btn btn-lg btn-block btn-google">
             <i class="fa fa-google-plus visible-xs"></i>
             <span class="hidden-xs">Google+</span>
           </a>
