--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@
           </a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="btn btn-lg btn-block btn-twitter">
+          <a href="auth/twitter" class="btn btn-lg btn-block btn-twitter">
             <i class="fa fa-twitter visible-xs"></i>
             <span class="hidden-xs">Twitter</span>
           </a>
