--- a/views/login.html
+++ b/views/login.html
@@ -7,22 +7,22 @@
    <div class="col-sm-6 col-md-8 col-md-push-5">
     <div>
       <h3 class="omb_authTitle">Login or <a href="/register">Sign up</a></h3>
-      <div class="row omb_row-sm-offset-3 omb_socialButtons">
-        <div class="col-xs-4 col-sm-2">
-          <a href="/auth/facebook" class="btn btn-lg btn-block btn-facebook">
-            <i class="fa fa-facebook visible-xs"></i>
+      <div class="row row-sm-offset-3 socialButtons">
+        <div class="col-xs-4 col-sm-2 social">
+          <a href="/auth/facebook" class="btn btn-lg btn-block btn-facebook social-facebook">
+            <i class="fa fa-facebook"></i>
             <span class="hidden-xs">Facebook</span>
           </a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="btn btn-lg btn-block btn-twitter">
-            <i class="fa fa-twitter visible-xs"></i>
+          <a href="#" class="btn btn-lg btn-block btn-twitter social-twitter">
+            <i class="fa fa-twitter"></i>
             <span class="hidden-xs">Twitter</span>
           </a>
         </div>
-        <div class="col-xs-4 col-sm-2">
-          <a href="#" class="btn btn-lg btn-block btn-google">
-            <i class="fa fa-google-plus visible-xs"></i>
+        <div class="col-xs-4 col-sm-2 social">
+          <a href="#" class="btn btn-lg btn-block btn-google social-google">
+            <i class="fa fa-google-plus"></i>
             <span class="hidden-xs">Google+</span>
           </a>
         </div>
@@ -50,13 +50,6 @@
 
             <button class="btn btn-lg btn-primary btn-block login" type="submit">Login</button>
           </form>
-        </div>
-      </div>
-      <div class="row omb_row-sm-offset-3">
-        <div class="col-xs-12 col-sm-3">
-          <p class="omb_forgotPwd">
-            <a href="#">Forgot password?</a>
-          </p>
         </div>
       </div>
     </div>
