--- a/views/register.html
+++ b/views/register.html
@@ -11,21 +11,16 @@
                 </div>
                 <div class="panel-body">
                     <form role="form" action="/register" method="post">
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <div class="form-group">
-                                    <input type="text" name="fullname" id="first_name" class="form-control input-sm" placeholder="Full Name">
-                                </div>
-                            </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <div class="form-group">
-                                    <input type="text" name="username" id="username" class="form-control input-sm" placeholder="Username">
-                                </div>
-                            </div>
+                        <div class="form-group">
+                            <input type="text" name="fullname" id="first_name" class="form-control input-sm" placeholder="Full Name">
                         </div>
 
                         <div class="form-group">
-                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                            <input type="text" name="username" id="username" class="form-control input-sm" placeholder="Username">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email">
                         </div>
 
                         <div class="form-group">
@@ -45,7 +40,7 @@
                             </div>
                         </div>
 
-                        <input type="submit" value="Register" class="btn btn-info btn-block">
+                        <input type="submit" value="Register" class="btn btn-primary btn-block">
                     </form>
                 </div>
             </div>
