--- a/views/profile.html
+++ b/views/profile.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="col-sm-6 col-md-8">
                         <h4>{{ profile.fullname }}</h4>
-                        <small><cite title="">{{ profile.address }}<i class="glyphicon glyphicon-map-marker">
+                        <small><cite title="">{{ profile.address }}<i class="glyphicon glyphicon-map-marke" width="304" height="236">
                         </i></cite></small>
                         <p>
                             <i class="glyphicon glyphicon-envelope"></i>{{ profile.email }}
