--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
           <form class="omb_loginForm" action="" autocomplete="off" method="POST">
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-user"></i></span>
-              <input type="text" class="form-control" name="username" placeholder=Email address">
+              <input type="text" class="form-control" name="username" placeholder="Username">
             </div>
             <span class="help-block"></span>
 
