--- a/views/login.html
+++ b/views/login.html
@@ -15,13 +15,13 @@
           </a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="btn btn-lg btn-block btn-twitter social-twitter">
+          <a href="/auth/twitter" class="btn btn-lg btn-block btn-twitter social-twitter">
             <i class="fa fa-twitter"></i>
             <span class="hidden-xs">Twitter</span>
           </a>
         </div>
         <div class="col-xs-4 col-sm-2 social">
-          <a href="#" class="btn btn-lg btn-block btn-google social-google">
+          <a href="/auth/google" class="btn btn-lg btn-block btn-google social-google">
             <i class="fa fa-google-plus"></i>
             <span class="hidden-xs">Google+</span>
           </a>
