fix message and fullname

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,10 @@ small {
     color: #999;
 }
 
+.fullname_profile {
+    font-size: 15px;
+    color: #ffffff;
+}
 .logout-text {
     color: white;
 }
