--- a/views/register.html
+++ b/views/register.html
@@ -12,30 +12,30 @@
                 <div class="panel-body">
                     <form role="form" action="/register" method="post">
                         <div class="form-group">
-                            <input type="text" name="fullname" id="first_name" class="form-control input-sm" placeholder="Full Name">
+                            <input type="text" name="fullname" id="first_name" class="form-control input-sm" placeholder="Full Name" required>
                         </div>
 
                         <div class="form-group">
-                            <input type="text" name="username" id="username" class="form-control input-sm" placeholder="Username">
+                            <input type="text" name="username" id="username" class="form-control input-sm" placeholder="Username" required>
                         </div>
 
                         <div class="form-group">
-                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email">
+                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email" required>
                         </div>
 
                         <div class="form-group">
-                            <input type="Address" name="address" id="address" class="form-control input-sm" placeholder="Address">
+                            <input type="" name="address" id="address" class="form-control input-sm" placeholder="Address" required>
                         </div>
 
                         <div class="row">
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <div class="form-group">
-                                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password" required>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <div class="form-group">
-                                    <input type="password" name="password2" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
+                                    <input type="password" name="password2" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password" required>
                                 </div>
                             </div>
                         </div>
