add profile service and check file upload

--- a/views/profile.html
+++ b/views/profile.html
@@ -17,7 +17,7 @@
                         <p>
                             <i class="glyphicon glyphicon-envelope"></i>{{ profile.email }}
                             <br />
-                            <i class="username">{{ profile.username }}</i>
+                            <i class="fullname">{{ profile.fullname }}</i>
                             <br />
                         </p>
                         <a href="/profile/edit"><button class="btn btn-warning">Change Profile</button></a>
