--- a/views/_layout.html
+++ b/views/_layout.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src='/js/index.js'></script>
+    <link href="bootstrap/css/bootstrap-material-design.css" rel="stylesheet">
+    <link href="bootstrap/css/ripples.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container container-fluid">
@@ -34,4 +34,11 @@
     {% block content %}
     {% endblock %}
 </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src='/js/index.js'></script>
+    <script src="bootstrap/js/material.js"></script>
+    <script src="bootstrap/js/ripples.min.js"></script>
+    <script>
+        $.material.init();
+    </script>
 </body>
