--- a/views/login.html
+++ b/views/login.html
@@ -4,56 +4,53 @@
 {% block content %}
 <div class="container">
   <div class="row centered-form">
-   <div class="col-sm-6 col-md-8 col-md-push-5">
-    <div>
-      <h3 class="omb_authTitle">Login or <a href="/register">Sign up</a></h3>
-      <div class="row row-sm-offset-3 socialButtons">
-        <div class="col-xs-4 col-sm-2 social">
-          <a href="/auth/facebook" class="btn btn-lg btn-block btn-facebook social-facebook">
-            <i class="fa fa-facebook"></i>
-            <span class="hidden-xs">Facebook</span>
-          </a>
+    <div class="col-md-6 col-md-offset-3 login-form">
+      <h2 class="text-login">Login</h2>
+      <form class="col-md-8 col-md-offset-2">
+        <div class="form-group label-floating ">
+          <label class="control-label">Username</label>
+          <div class="input-group custom-input">
+            <input type="text" class="form-control">
+          </div>
         </div>
-        <div class="col-xs-4 col-sm-2">
-          <a href="/auth/twitter" class="btn btn-lg btn-block btn-twitter social-twitter">
-            <i class="fa fa-twitter"></i>
-            <span class="hidden-xs">Twitter</span>
-          </a>
-        </div>
-        <div class="col-xs-4 col-sm-2 social">
-          <a href="/auth/google" class="btn btn-lg btn-block btn-google social-google">
-            <i class="fa fa-google-plus"></i>
-            <span class="hidden-xs">Google+</span>
-          </a>
-        </div>
-      </div>
 
-      <div class="row omb_row-sm-offset-3 omb_loginOr">
-        <div class="col-xs-12 col-sm-6">
-          <hr class="omb_hrOr">
+        <div class="form-group label-floating">
+          <label class="control-label" >Password</label>
+          <div class="input-group custom-input">
+            <input type="text" class="form-control">
+          </div>
         </div>
-      </div>
 
-      <div class="row omb_row-sm-offset-3">
-        <div class="col-xs-12 col-sm-6">
-          <form class="omb_loginForm" action="" autocomplete="off" method="POST">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-user"></i></span>
-              <input type="text" class="form-control" name="username" placeholder="Username">
-            </div>
-            <span class="help-block"></span>
-
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-              <input type="password" class="form-control" name="password" placeholder="Password">
-            </div>
-
-            <button class="btn btn-lg btn-primary btn-block login" type="submit">Login</button>
-          </form>
+        <div class="row col-btn">
+          <div class="col-md-6">
+            <button class="btn btn-block btn-login" type="submit">
+              <a href="" class="text-login">Login</a>
+            </button>
+          </div>
+          <div class="col-md-6">
+            <button class="btn btn-register">
+              <a href="/register" class="text-register">Register</a>
+            </button>
+          </div>
         </div>
-      </div>
+
+        <div class="row col-md-10 col-md-offset-1 login-social">
+          <div class="col-md-6 custom-social-text">or login using:</div>
+          <div class="col-md-6 custom-icon-social">
+            <a href="/auth/facebook">
+              <div class="col-md-4 fa fa-facebook custom-facebook"></div>
+            </a>
+            <a href="/auth/twitter">
+              <div class="col-md-4 fa fa-twitter custom-twitter"></div>
+            </a>
+            <a href="/auth/google">
+              <div class="col-md-4 fa fa-google-plus custom-google"></div>
+            </a>
+          </div>
+        </div>
+
+      </form>
     </div>
-   </div>
   </div>
 </div>
 {% endblock %}
