--- a/views/_layout.html
+++ b/views/_layout.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container container-fluid">
     {% if user %}
-    <nav class="navbar transparent navbar-fixed-top">
+    <nav class="navbar transparent navbar-fixed-top custom-nav">
         <ul class="nav navbar-nav navbar-right logout">
             <li><a href="/logout" class="logout-text"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
