--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row centered-form">
     <div class="col-md-6 col-md-offset-3 login-form">
-      <h2 class="text-login">Login</h2>
+      <h2 class="text-login">User Login</h2>
       <form class="col-md-8 col-md-offset-2">
         <div class="form-group label-floating ">
           <label class="control-label">Username</label>
