--- a/views/_layout.html
+++ b/views/_layout.html
@@ -15,8 +15,10 @@
     {% if user %}
     <nav class="navbar transparent navbar-fixed-top custom-nav">
         <ul class="nav navbar-nav navbar-right logout">
-            <li><a href="/logout" class="logout-text"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-            <li style="background-color: red;"><i class="username">{{ profile.username }}</i></li>
+            <li><a href="/logout" class="logout-text">
+                <span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                <!-- why not action -->
+            <li><i class="username">{{ profile.username }}</i></li>
         </ul>
     </nav>
     {% endif %}
