--- a/views/profile.html
+++ b/views/profile.html
@@ -20,7 +20,15 @@
                             <br>
                             <i class="fa fa-user custom-icon username">{{ profile.username }}</i>
                         </p>
-                        <a href="/profile/edit"><button class="btn btn-warning">Change Profile</button></a>
+
+                        <div class="row col-md-8 col-md-offset-2">
+                            <div class="col-md-5">
+                                <a href="/profile/edit"><button class="btn btn-warning">Change Profile</button></a>
+                            </div>
+                            <div class="col-md-5 col-md-offset-2">
+                                <a href="/profile/"><button class="btn btn-warning change-pass">Change Password</button></a>
+                            </div>
+                        </div>
                         <!-- <a href="/profile/editPw"><button class="btn-default">Change Password</button></a> -->
                     </div>
                 </div>
