--- a/views/list-profile.html
+++ b/views/list-profile.html
@@ -2,27 +2,26 @@
 {% extends '_layout.html' %}
 
 {% block content %}
-<h1>{{title}}</h1>
+<h1 class="text">{{title}}</h1>
 <hr>
 <div class="row">
-	<div class="col-md-8"></div>
-	<div class="col-md-4">
+	<div class="col-md-4 col-md-push-8">
 		<div class="input-group" >
 			<div class="input-group-btn">
 		        <select class="btn searchSelect">
 					<option value="username"
 					{% if (key == 'username') %}
-						selected 
+						selected
 					{% endif %}
 					>Username</option>
 					<option value="fullname"
 					{% if (key == 'fullname') %}
-						selected 
+						selected
 					{% endif %}
 					>Full Name</option>
-		        </select>          	
+		        </select>
 	      	</div>
-			
+
 			<input type="text" class="form-control searchInput" placeholder="Search..." value="{{value}}">
 			<span class="input-group-btn">
 				<button class="btn btn-default searchButton" type="button">
@@ -33,8 +32,8 @@
 	</div>
 </div>
 
-<table class="table table-striped table-hover">
-	<thead>
+<table class="table table-filter">
+	<thead class="custom-thead">
 		<tr>
 			<th>Id</th>
 			<th>Username</th>
@@ -43,10 +42,10 @@
 			<th>Address</th>
 		</tr>
 	</thead>
-	
+
 	<tbody>
 	{% for profile in profiles %}
-		<tr>
+		<tr class="custom-list">
 			<td>{{ profile.id }}</td>
 			<td>{{ profile.username }}</td>
 			<td>{{ profile.fullname }}</td>
