--- a/views/profile.html
+++ b/views/profile.html
@@ -26,7 +26,7 @@
                                 <a href="/profile/edit"><button class="btn btn-warning">Change Profile</button></a>
                             </div>
                             <div class="col-md-5 col-md-offset-2">
-                                <a href="/profile/"><button class="btn btn-warning change-pass">Change Password</button></a>
+                                <a href="#"><button class="btn btn-warning change-pass">Change Password</button></a>
                             </div>
                         </div>
                         <!-- <a href="/profile/editPw"><button class="btn-default">Change Password</button></a> -->
