--- a/views/login.html
+++ b/views/login.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="row col-md-10 col-md-offset-1 login-social">
-          <div class="col-md-6 custom-social-text">or login using:</div>
+          <div class="col-md-6 custom-social-text">...or login with:</div>
           <div class="col-md-6 custom-icon-social">
             <a href="/auth/facebook">
               <div class="col-md-4 fa fa-facebook custom-facebook"></div>
