--- a/views/login.html
+++ b/views/login.html
@@ -6,26 +6,24 @@
   <div class="row centered-form">
     <div class="col-md-6 col-md-offset-3 login-form">
       <h2 class="text-login">User Login</h2>
-      <form class="col-md-8 col-md-offset-2">
+      <form class="col-md-8 col-md-offset-2" action="" autocomplete="off" method="post">
         <div class="form-group label-floating ">
           <label class="control-label">Username</label>
           <div class="input-group custom-input">
-            <input type="text" class="form-control">
+            <input type="text" name="username" class="form-control">
           </div>
         </div>
 
         <div class="form-group label-floating">
           <label class="control-label" >Password</label>
           <div class="input-group custom-input">
-            <input type="text" class="form-control">
+            <input type="password" name="password" class="form-control">
           </div>
         </div>
 
         <div class="row col-btn">
           <div class="col-md-6">
-            <button class="btn btn-block btn-login" type="submit">
-              <a href="" class="text-login">Login</a>
-            </button>
+            <button class="btn btn-block btn-login" type="submit">Login</button>
           </div>
           <div class="col-md-6">
             <button class="btn btn-register">
