requied for form register

--- a/views/register.html
+++ b/views/register.html
@@ -25,7 +25,7 @@
             <span class="req">*</span>
           </label>
           <div class="input-group custom-input">
-            <input type="text" name="fullname" id="first_name" class="form-control input-sm">
+            <input type="text" name="fullname" id="first_name" class="form-control input-sm" required>
           </div>
         </div>
 
@@ -34,7 +34,7 @@
             <span class="req">*</span>
           </label>
           <div class="input-group custom-input">
-            <input type="text" name="username" id="user_name" class="form-control input-sm">
+            <input type="text" name="username" id="user_name" class="form-control input-sm" required>
           </div>
         </div>
 
@@ -43,7 +43,7 @@
             <span class="req">*</span>
           </label>
           <div class="input-group custom-input">
-            <input type="email" name="email" id="email" class="form-control input-sm">
+            <input type="email" name="email" id="email" class="form-control input-sm" required>
           </div>
         </div>
 
@@ -52,7 +52,7 @@
             <span class="req">*</span>
           </label>
           <div class="input-group custom-input">
-            <input type="text" name="address" id="address" class="form-control input-sm">
+            <input type="text" name="address" id="address" class="form-control input-sm" required>
           </div>
         </div>
 
@@ -63,7 +63,7 @@
                 <span class="req">*</span>
               </label>
               <div class="input-group custom-input">
-                <input type="password" name="password" id="password" class="form-control input-sm">
+                <input type="password" name="password" id="password" class="form-control input-sm" required>
               </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
                 <span class="req">*</span>
               </label>
               <div class="input-group custom-input">
-                <input type="password" name="password2" id="password_confirmation" class="form-control input-sm">
+                <input type="password" name="password2" id="password_confirmation" class="form-control input-sm" required>
               </div>
             </div>
           </div>
