--- a/views/profile.html
+++ b/views/profile.html
@@ -17,9 +17,10 @@
                         </p>
                         <p>
                             <i class="glyphicon glyphicon-envelope custom-icon"></i>{{ profile.email }}
-                            <br>
-                            <i class="fa fa-user custom-icon username">{{ profile.username }}</i>
                         </p>
+                        <!-- <p>
+                            <i class="fa fa-user custom-icon username"></i> {{ profile.username }}
+                        </p> -->
 
                         <div class="row col-md-8 col-md-offset-2">
                             <div class="col-md-5">
