--- a/views/register.html
+++ b/views/register.html
@@ -9,7 +9,7 @@
       <p class="col-md-10 col-md-offset-1 introduction">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere repellat dolorum nisi amet qui asperiores necessitatibus, quasi quis ipsam omnis voluptatum eveniet magni quaerat debitis, magnam. Natus aperiam sint tempora.</p>
       <div class="row col-md-6 col-md-offset-3">
         <div class="col-md-6">
-          <button class="btn btn-block btn-redirect-login"><a href="/login" class="text">Login</a></button>
+          <a href="/login" class="text"><button class="btn btn-block btn-redirect-login">Login</button></a>
         </div>
         <div class="col-md-6">
           <button class="btn btn-block btn-more"><a href="#" class="text">Learn More</a></button>
@@ -78,7 +78,7 @@
             </div>
           </div>
         </div>
-
+        <input type="hidden" name="avatar" value="https://lawfarm.in/assets/default-avatar-25d12326da7a8a5adc9a191e63d512e3c8345d1ab03eacbf9a89f24f2ce7f1c6.png">
         <div class="row">
           <div class="col-md-6 col-md-push-3">
             <input type="submit" value="Register" class="btn btn-register">
