--- a/views/list-profile.html
+++ b/views/list-profile.html
@@ -47,8 +47,8 @@
 	{% for profile in profiles %}
 		<tr class="custom-list">
 			<td>{{ profile.id }}</td>
-			<td><a href="/profile">{{ profile.username }}</a></td>
-			<td>{{ profile.fullname }}</td>
+			<td>{{ profile.username }}</td>
+			<td><a href="/profile/{{ profile.credentialId }}">{{ profile.fullname }}</a></td>
 			<td>{{ profile.email }}</td>
 			<td>{{ profile.address }}</td>
 		</tr>
