--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,22 @@ button.btn.btn-login {
   color: #009688;
 }
 
+a.text {
+    text-decoration: none;
+}
+
+a.text.btn.btn-block.btn-register:hover {
+    border: 1px solid #009688;
+    color: #05080A;
+    background-color: #E1E1E1;
+}
+
+a.text.btn.btn-block.btn-register {
+    background-color: #009688;
+    border-radius: 0.5em;
+    color: #ffffff;
+}
+
 .custom-twitter {
   font-size: 25px;
   color: #1DA1F2;
