--- a/views/login.html
+++ b/views/login.html
@@ -26,9 +26,11 @@
             <button class="btn btn-block btn-login" type="submit">Login</button>
           </div>
           <div class="col-md-6">
-            <button class="btn btn-register">
-              <a href="/register" class="text-register">Register</a>
-            </button>
+            <!--<button class="btn btn-register">-->
+              <!--<a href="/register" class="text-register">Register</a>-->
+            <!--</button>-->
+
+            <a href="/register" class="text btn btn-block btn-register">Register</a>
           </div>
         </div>
 
