--- a/views/profile.html
+++ b/views/profile.html
@@ -18,16 +18,18 @@
                         <p>
                             <i class="glyphicon glyphicon-envelope custom-icon"></i>{{ profile.email }}
                         </p>
-                        <!-- <p>
-                            <i class="fa fa-user custom-icon username"></i> {{ profile.username }}
-                        </p> -->
 
                         <div class="row col-md-8 col-md-offset-2">
-                            <div class="col-md-5">
-                                <a href="/profile/edit"><button class="btn btn-warning">Change Profile</button></a>
+                            <div class="col-md-3">
+                                <a href="/profile/edit"><button class="btn btn-warning btn-change">Edit Profile</button></a>
+                            </div>
+
+                            <div class="col-md-2"></div>
+
+                            <div class="col-md-3">
+                                <a href="/profile/list"><button class="btn btn-change">List Users</button></a>
                             </div>
                         </div>
-                        <!-- <a href="/profile/editPw"><button class="btn-default">Change Password</button></a> -->
                     </div>
                 </div>
             </div>
