--- a/views/profile.html
+++ b/views/profile.html
@@ -19,12 +19,15 @@
                             <i class="glyphicon glyphicon-envelope custom-icon"></i>{{ profile.email }}
                         </p>
 
+                        <br>
+                        <br>
+
                         <div class="row col-md-8 col-md-offset-2">
                             <div class="col-md-3">
-                                <a href="/profile/edit"><button class="btn btn-warning btn-change">Edit Profile</button></a>
+                                <a href="/profile/edit"><button class="btn btn-change">Edit Profile</button></a>
                             </div>
 
-                            <div class="col-md-2"></div>
+                            <div class="col-md-4"></div>
 
                             <div class="col-md-3">
                                 <a href="/profile/list"><button class="btn btn-change">List Users</button></a>
