--- a/views/list-profile.html
+++ b/views/list-profile.html
@@ -5,7 +5,7 @@
 <h1 class="text">{{title}}</h1>
 <hr>
 <div class="row">
-	<div class="col-md-4 col-md-push-8">
+	<div class="col-md-6 col-md-offset-6">
 		<div class="input-group" >
 			<div class="input-group-btn">
 		        <select class="btn searchSelect">
